hard-gists/5267494/run.log
=== Docker Run Log for 5267494 ===
Started at: Mi 29. Okt 15:31:22 CET 2025

[2025-10-29 15:31:41] START: Running container for 5267494
[2025-10-29 15:31:41] SUCCESS: Container 830958e571f60772f5f8ee94896e2e4939ac4846e9d5b579f9c69e62f71c06b7 started for 5267494
=== Container logs for 5267494 ===
Traceback (most recent call last):
  File "/snippet.py", line 1, in <module>
    import webapp2
  File "/usr/local/lib/python3.11/site-packages/webapp2.py", line 571
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5267494 ===
[2025-10-29 15:31:43] INFO: Container 830958e571f60772f5f8ee94896e2e4939ac4846e9d5b579f9c69e62f71c06b7 has stopped
